<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homel_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_member"
            android:icon="@drawable/member_icon"
            android:title="@string/menu_member" />
        <item
            android:id="@+id/nav_rules"
            android:icon="@drawable/rules_icon"
            android:title="@string/menu_rules" />
        <item
            android:id="@+id/nav_owner"
            android:icon="@drawable/owner_icon"
            android:title="@string/menu_owner" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
